= Release Notes

== Version 0.4.x
* added command to show beetle version: "beetle --version"

== Version 0.4.3
* fixed a race condition which could lead to duplicate message processing
* fixed eventmachine shutdown sequence problem, which led to ACKs
  occasionally being lost due to writing to a closed socket, which in
  turn caused messages to be processed twice
* stop_listening now always triggers the subscribe shutdown sequence
  via a eventmachine timer callback, if the eventmachine reactor is running

== Version 0.4.2
* Fail hard on missing master file
* Set message timestamp header

== Version 0.4.1
* Require newer bunny version (0.7.10) to fix publishing of messages larger than frame_max

== Version 0.4.0
* Added optional dead lettering feature to mimic RabbitMQ 2.x requeueing behaviour on RabbitMQ 3.x

== Version 0.3.14
* switched message id generation to use v4 uuids

== Version 0.3.0

* redis master file contents now correctly reflects the state of the running configuration server
* allow accelerating master switch via POST to redis configuration server
* embedded http server into the redis configuration server (port 8080)
* fixed a problem with redis shutdown command
* upgraded to redis 2.2.2
* upgraded to amqp gem version 0.8 line
* use hiredis as the redis backend, which overcomes lack of proper time-outs in the "generic" redis-rb
  gem for Ruby 1.9
* use fully qualified hostnames to identify redis configuration clients

== Version 0.2.9.8

* since version 2.0, RabbitMQ supports Basic.reject(:requeue => true). we use it now too,
  because it enhances performance of message processors. this means of course, you can
  only use beetle gem versions >= 0.2.9.8 if your rabbitmq brokers are at least version 2.0.
* publishing timeout defaults to 0 to avoid extreme message loss in some cases


== Version 0.2.9.7

* use new bunny_ext gem and allow specification of global publishing timeouts